// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Col > should match a snapshot and render children 1`] = `
<DocumentFragment>
  <div
    class="mocked-styled-1 el-col"
  >
    <p>
      I am child
    </p>
  </div>
</DocumentFragment>
`;

exports[`ColHalf > should match a snapshot and render children 1`] = `
<DocumentFragment>
  <div
    class="mocked-styled-2 el-col-half"
  >
    <p>
      I am child
    </p>
  </div>
</DocumentFragment>
`;

exports[`ColQuarter > should match a snapshot and render children 1`] = `
<DocumentFragment>
  <div
    class="mocked-styled-3 el-col-quarter"
  >
    <p>
      I am child
    </p>
  </div>
</DocumentFragment>
`;

exports[`ColSplit > should match a snapshot and render children 1`] = `
<DocumentFragment>
  <div
    class="mocked-styled-4 el-col-split"
  >
    <p>
      I am child
    </p>
  </div>
</DocumentFragment>
`;

exports[`ColSplitThird > should match a snapshot and render children 1`] = `
<DocumentFragment>
  <div
    class="mocked-styled-6 el-col-split-third"
  >
    <p>
      I am child
    </p>
  </div>
</DocumentFragment>
`;

exports[`ColSplitTwoThirds > should match a snapshot and render children 1`] = `
<DocumentFragment>
  <div
    class="mocked-styled-7 el-col-split-two-thirds"
  >
    <p>
      I am child
    </p>
  </div>
</DocumentFragment>
`;

exports[`Grid > should match a snapshot and render children 1`] = `
<DocumentFragment>
  <div
    class="mocked-styled-0 el-grid"
  >
    <p>
      I am child
    </p>
  </div>
</DocumentFragment>
`;

exports[`GridThirds > should match a snapshot and render children 1`] = `
<DocumentFragment>
  <div
    class="mocked-styled-5 el-grid-thirds"
  >
    <p>
      I am child
    </p>
  </div>
</DocumentFragment>
`;
